fix: add newline signal icon and enhance styling for very dark mode

--- a/css/dark-style.css
+++ b/css/dark-style.css
@@ -30,14 +30,14 @@
 }
 
 .very-dark-mode .stream-info {
-  font-family: "Noto Sans", ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji" !important;
+  font-family: "Noto Sans Display", sans-serif !important;
+  font-weight: 500 !important;
   background-color: rgb(23 23 23 / 1);
 }
 .dark-mode .newline-category {
   color: #a0acb6;
+  font-size: 12px !important;
+  margin-top: -0.5px !important;
 }
 .dark-mode .stream-title-display {
   color: #a0acb6;
@@ -48,16 +48,22 @@
 .very-dark-mode .stream-title-display {
   color: #a3a3a3;
 }
-.very-dark-mode .channel-name {
-  color: white !important;
-  font-family: "Noto Sans Display", ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji" !important;
+
+@font-face {
+  font-family: "Noto Sans Display";
+  src: url("../fonts/NotoSansDisplay-Regular.woff2") format("woff2"),
+    url("../fonts/NotoSansDisplay-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
-.very-dark-mode .stream-item {
-  margin-bottom: 5px; /* Increase space between streams */
+@font-face {
+  font-family: "Noto Sans Display";
+  src: url("../fonts/NotoSansDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 .dark-mode .channel-name.with-avatar {
@@ -65,6 +71,13 @@
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 14px;
   color: #dedee3;
+}
+
+.very-dark-mode .channel-name.with-avatar {
+  font-family: "Noto Sans Display", sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  color: rgb(255, 255, 255);
 }
 
 @font-face {
@@ -111,12 +124,17 @@
 
 .very-dark-mode .viewers {
   color: rgb(248 113 113 / 1);
-  font-weight: 700 !important;
+  font-weight: 500 !important;
   font-size: 14px;
-  text-shadow: 0px 0px 1px rgba(248, 113, 113, 0.3);
 }
+
 .dark-mode .viewers.rerun {
   color: #9ca3af;
+}
+
+.signal-icon[src="css/rerun.svg"] {
+  height: 15px !important;
+  width: 15px !important;
 }
 
 .dark-mode .access-count {
