--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ body {
   padding: 7px 7px 3px;
   text-decoration: none;
   color: black;
-  transition: background-color 0.3s;
   position: relative;
 }
 
@@ -120,6 +119,10 @@ body {
   align-items: center; /* Align items vertically */
   justify-content: space-between; /* Distribute space between elements */
   width: 100%; /* Full width to accommodate children */
+}
+
+.sub-wrapper-with-avatar.sub-wrapper-newline {
+  padding-left: 10px;
 }
 
 .stream-info.with-avatar {
@@ -164,6 +167,7 @@ body {
   margin-top: 0px;
   border-bottom: 1px dashed #9999996e;
 }
+
 /* New Wrapper Style */
 .channel-category-wrapper {
   justify-content: flex-start;
@@ -198,6 +202,16 @@ body {
   margin-right: 5px; /* Adjust the space between channel name and category */
 }
 
+.sub-wrapper-newline .channel-name {
+  margin-top: -4px !important; /* Adjust this negative margin to move it up */
+  display: block; /* Ensure it's a block element */
+}
+
+.sub-wrapper-with-thumbnail {
+  padding-bottom: 5px;
+  padding-top: 1px;
+}
+
 .channel-name.with-avatar {
   font-weight: bold; /* Apply bold font weight */
   font-family: "Open Sans", Arial, sans-serif;
@@ -205,6 +219,9 @@ body {
   font-size: 14px;
 }
 
+.sub-wrapper-newline {
+  padding-left: 5px;
+}
 .stream-thumbnail {
   width: 80px;
   height: 45px;
